test/black-box/v5/5.exp
# Exemplo de criacao de arrays em TOC
[Line 4] Syntax error: Unknown error.
[Line 5] Semantic error: Main function toc() not found.
