test/black-box/v5/5.toc
# Funcao principal do programa
void toc()
  # Exemplo de criacao de arrays em TOC
  flt sucos[3] = 1.5
